# SPDX-FileCopyrightText: 2021 Open Energy Solutions Inc
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openfmb-codegen"
version = "0.6.1"
authors = ["Tom Burdick <tom@openenergysolutionsinc.com>", "Dan Burkert <dan@danburkert.com>"]
license = "Apache-2.0"
repository = "https://github.com/openenergysolutions/openfmb"
readme = "README.md"
description = "A Protocol Buffers implementation for the Rust Language."
edition = "2018"

[dependencies]
bytes = "1.4"
heck = "0.4"
itertools = "0.11"
log = "0.4"
multimap = { version = "0.9", default-features = false }
petgraph = { version = "0.6", default-features = false }
prost = "0.11.9"
openfmb-descriptors = { version = "0.1", path = "../openfmb-descriptors" }
proto-types = { version = "0.7", path = "../proto-types" }
tempfile = "3"

[build-dependencies]
which = { version = "4", default-features = false }

[dev-dependencies]
env_logger = { version = "0.10", default-features = false }
