[package]
name = "openfmb-messages-ext"
version = "0.1.0"
authors = ["Tupshin Harper <tupshin@openenergysolutionsinc.com>", "Tom Burdick <tom@openenergysolutionsinc.com>"]
edition = "2018"

[dependencies]
openfmb-messages = { path = "../openfmb-messages"}
log = "0.4"
uuid =  { version = "0.8", features = ["serde", "v4"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
